# Codex-Pro-Launcher

./: .gitignore  AGENTS.md  Build.cmd  Cargo.toml  README.md  README_CN.md  README_JA.md  package.json
.codex/: config.toml
.githooks/: pre-commit  pre-push
apps/codex-pro-launcher/: Cargo.toml  build.rs
apps/codex-pro-launcher/src/: main.rs
crates/codex-pro-bridge/: Cargo.toml
crates/codex-pro-bridge/src/: lib.rs  protocol.rs  router.rs  state.rs  worker.rs
crates/codex-pro-bridge/src/handlers/: cloud_sync.rs  codex_sqlite_log_blocker.rs  diff_hover_preview.rs  mod.rs  mouse_gestures.rs  pet_event_sound.rs  pet_sync.rs  sync_license.rs  today_token_usage.rs  update_check.rs
crates/codex-pro-bridge/src/handlers/conversation_archive/: codex_state.rs  crypto.rs  device_delete.rs  identity.rs  lifecycle.rs  markdown.rs  mod.rs  package.rs  preview.rs  progress.rs  project.rs  remote.rs  request.rs  rollout_reader.rs  session_index.rs  state.rs
crates/codex-pro-core/: Cargo.toml  build.rs
crates/codex-pro-core/src/: args.rs  assets.rs  cdp.rs  codex_app.rs  diagnostics.rs  injection.rs  injection_manifest.rs  lib.rs  local_config.rs  native_bridge.rs  paths.rs  ports.rs  process.rs  split_items_hotpath_patch.rs  windows_shell.rs
scripts/: activate-packaged-app.ps1  build-launcher-exe.ps1  build-release-interactive.ps1  build-rust-single-exe.ps1  check-chat-line-hover.mjs  check-chat-width-resizer.mjs  check-conversation-archive-sidebar.mjs  check-diff-hover-navigation.mjs  check-file-tree-systems.mjs  check-i18n-catalog.mjs  check-native-bridge-modules.mjs  check-native-thread-drag-to-chat.mjs  check-public-boundary.ps1  check-settings-menu-modules.mjs  check-settings-model.mjs  check-split-items-hotpath-patch.mjs  check-update-check-cache.mjs  check-usage-panel-route-scope.mjs  check-usage-panel-view.mjs  generate-release-notes.mjs  inject-dev.ps1  install-git-hooks.ps1  prepare-release-version.mjs
src/: launcher.mjs
src/inject/: index.js
src/inject/core/: dialogs.js  dom.js  fetch-bridge.js  i18n.js  lifecycle.js  native-bridge.js  runtime.js
src/inject/systems/background-wallpaper/: index.js
src/inject/systems/chat-line-hover/: index.js  settings.js
src/inject/systems/chat-width-resizer/: index.js  settings.js
src/inject/systems/context-usage-inline/: index.js  settings.js
src/inject/systems/conversation-archive/: index.js
src/inject/systems/conversation-archive-sidebar/: index.js  settings.js
src/inject/systems/diff-hover-preview/: index.js  navigation-utils.js
src/inject/systems/file-tree-active-reveal/: index.js  settings.js
src/inject/systems/file-tree-filter/: index.js  settings.js
src/inject/systems/file-tree-response-filter/: index.js
src/inject/systems/pet-sync/: index.js
src/launcher/: args.mjs  cdp-client.mjs  codex-app.mjs  injection-manifest.mjs  injection.mjs  local-config.mjs  main.mjs  native-bridge.mjs  paths.mjs  pet-event-sound-overlay-injection.mjs
src/launcher/native-bridge/: common.mjs  router.mjs  worker-cleanup.mjs
tools/: vscode-diff.cmd
(+37 files in other folders)
