[workspace]
resolver = "2"
members = [
  "apps/codex-pro-launcher",
  "crates/codex-pro-core",
  "crates/codex-pro-bridge",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/FcsVorfeed/Codex-Pro-Launcher"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
flate2 = "1"
futures-util = "0.3"
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
winresource = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = "symbols"
