[package]
name = "codex-pro-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "Codex-Pro-Launcher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
codex-pro-bridge = { path = "../../crates/codex-pro-bridge" }
codex-pro-core = { path = "../../crates/codex-pro-core" }
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
