[package]
name = "codex-pro-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
base64.workspace = true
codex-pro-core = { path = "../codex-pro-core" }
flate2.workspace = true
pbkdf2.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
] }
